# TestAssignmentCityGrid

./: .gitignore  README.md  Task.md  main.py  pyproject.toml
