[tool.poetry]
name = "testassignmentcitygrid"
version = "0.1.0"
description = ""
authors = ["Alexey <97658978+SAtbish@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
